--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="author" content="Taha Kocal">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Taha`s Web Page </title>
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="/css/style.css" rel="stylesheet" type="text/css">
 <base href="dosya/">
 
 </head>
