--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div> 
     <table class="table1" cellpadding=""  >
     <td>
-    <a href="https://www.kastamonu.edu.tr/index.php/tr/"><img src="dosya/kulogo.png"  width="100" height="100"></a>  
+    <a href="https://www.kastamonu.edu.tr/index.php/tr/"><img src="src/kulogo.png"  width="100" height="100"></a>  
     </td>
     <td><p><b>AD SOYAD<br>NO<br>SINIF</b></p>
     </t>
@@ -23,7 +23,7 @@
     </t>
     <td><p align="center"><b> BİLGİSAYAR PROGRAMCILIĞI BÖLÜMÜ <br>
     GRAFİK VE ANİMASYON II DERSİ ÖDEVLERİ </p></b></td>
-    <td> <a href="https://www.instagram.com/tahakocal/"><img src="dosya/ben.png" width="130" height="130"></a>  </td>
+    <td> <a href="https://www.instagram.com/tahakocal/"><img src="src/ben.png" width="130" height="130"></a>  </td>
     </table>
 </div>
 
@@ -31,7 +31,7 @@
 
 <div class="odev">
     <h3>ÖDEV 1</h3> 
-    <iframe width="600" height="600" src="dosya/hafta2/hafta2odev1.html"  frameborder="0" 
+    <iframe width="600" height="600" src="src/hafta2/hafta2odev1.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 </div>
@@ -39,14 +39,14 @@
 
 <div class="odev">
     <h3>ÖDEV 2</h3> 
-    <iframe width="500" height="500" src="dosya/hafta3/hafta3odev1.html"  frameborder="0" 
+    <iframe width="500" height="500" src="src/hafta3/hafta3odev1.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 </div>
 
 <div class="odev">
     <h3>ÖDEV 3</h3> 
-    <iframe width="550" height="125" src="dosya/hafta4/hafta4odev1.html"  frameborder="0" 
+    <iframe width="555" height="130" src="src/hafta4/hafta4odev1.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 </div>
