--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta name="author" content="Taha Kocal">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Taha`s Web Page </title>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="/css/style.css" rel="stylesheet" type="text/css">
 
 
