--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="/css/style.css" rel="stylesheet" type="text/css">
-
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </head>
 <body>
@@ -28,6 +29,7 @@
     <td> <a href="https://www.instagram.com/tahakocal/"><img src="src/ben.png" width="130" height="130"></a>  </td>
     </table>
 </div>
+
 
 <br>
 
@@ -51,6 +53,12 @@
     <iframe width="555" height="130" src="src/hafta4/hafta4odev1.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
+</div>
+
+<div class="social">
+    <a href="https://twitter.com/tahakocal">    <ion-icon name="logo-twitter">      </ion-icon>     </a>
+    <a href="https://www.instagram.com/tahakocal/">    <ion-icon name="logo-instagram">    </ion-icon>     </a>
+    <a href="https://github.com/tahakocal">    <ion-icon name="logo-github">     </ion-icon>     </a>
 </div>
 
 </body>
