--- a/index.html
+++ b/index.html
@@ -16,16 +16,11 @@
 <body>
 
 <div> 
-    <table class="table1" cellpadding=""  >
-    <td>
-    <a href="https://www.kastamonu.edu.tr/index.php/tr/"><img src="src/kulogo.png"  width="100" height="100"></a>  
-    </td>
-    <td><p><b>AD SOYAD<br>NO<br>SINIF</b></p>
-    </t>
-    <td><p><b>Mehmet Taha Koçal<br>205511104<br>1/B</p></b>
-    </t>
-    <td><p align="center"><b> BİLGİSAYAR PROGRAMCILIĞI BÖLÜMÜ <br>
-    GRAFİK VE ANİMASYON II DERSİ ÖDEVLERİ </p></b></td>
+    <table class="table1" cellpadding="">
+    <td><a href="https://www.kastamonu.edu.tr/index.php/tr/"><img src="src/kulogo.png"  width="100" height="100"></a></td>
+    <td><p><b>AD SOYAD<br>NO<br>SINIF</b></p></td>
+    <td><p><b>Mehmet Taha Koçal<br>205511104<br>1/B</p></b></td>
+    <td><p align="center"><b> BİLGİSAYAR PROGRAMCILIĞI BÖLÜMÜ <br> GRAFİK VE ANİMASYON II DERSİ ÖDEVLERİ </p></b></td>
     <td> <a href="https://www.instagram.com/tahakocal/"><img src="src/ben.png" width="130" height="130"></a>  </td>
     </table>
 </div>
