--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </head>
-<body>
 
+<body>
 <div> 
-    <table class="table1" cellpadding="">
+    <table class="table1" >
     <td><a href="https://www.kastamonu.edu.tr/index.php/tr/"><img src="src/kulogo.png"  width="100" height="100"></a></td>
     <td><p><b>AD SOYAD<br>NO<br>SINIF</b></p></td>
     <td><p><b>Mehmet Taha Koçal<br>205511104<br>1/B</p></b></td>
@@ -24,25 +24,19 @@
     <td> <a href="https://www.instagram.com/tahakocal/"><img src="src/ben.png" width="130" height="130"></a>  </td>
     </table>
 </div>
-
-
 <br>
-
 <div class="odev">
     <h3>ÖDEV 1</h3> 
     <iframe width="600" height="600" src="src/hafta2/hafta2odev1.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 </div>
-
-
 <div class="odev">
     <h3>ÖDEV 2</h3> 
     <iframe width="500" height="500" src="src/hafta3/hafta3odev1.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 </div>
-
 <div class="odev">
     <h3>ÖDEV 3</h3> 
     <iframe width="555" height="130" src="src/hafta4/hafta4odev1.html"  frameborder="0" 
