--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8"> 
 <meta name="author" content="Taha Kocal">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="FCtalGhG-9HAp80WdmyQ6YQHC3jl22bnOq1fyf2xhS4" />
 <title>Taha`s Web Page </title>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="preconnect" href="https://fonts.googleapis.com">
