--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Taha`s Web Page </title>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="/css/style.css" rel="stylesheet" type="text/css">
+<link href="/css1/style1.css" rel="stylesheet" type="text/css">
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
@@ -45,11 +45,23 @@
     </iframe>
 </div>
 
+<div class="odev">
+    <h3>ÖDEV 4</h3> 
+    <iframe width="600" height="600" src="src/hafta9/hafta9odev.html"  frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+</div>
+
 <div class="social">
-    <a href="https://twitter.com/tahakocal">    <ion-icon name="logo-twitter">      </ion-icon>     </a>
     <a href="https://www.instagram.com/tahakocal/">    <ion-icon name="logo-instagram">    </ion-icon>     </a>
+    <a href="https://www.youtube.com/channel/UC8Gx6FH1B-kZUlOApvvt6Gw">    <ion-icon name="logo-youtube"></ion-icon>     </a>
+    <a href="https://twitter.com/tahakocal">    <ion-icon name="logo-twitter">      </ion-icon>     </a>
+    <a href="https://www.linkedin.com/in/tahakocal/">   <ion-icon name="logo-linkedin"></ion-icon> </a>
     <a href="https://github.com/tahakocal">    <ion-icon name="logo-github">     </ion-icon>     </a>
 </div>
+
+
+<p align="center">&copy; <script>document.write(new Date().getFullYear())</script> Bütün Hakları Saklıdır</p>
 
 </body>
 </html>
