--- a/index.html
+++ b/index.html
@@ -9,49 +9,60 @@
 <title>Taha`s Web Page </title>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="/css1/style1.css" rel="stylesheet" type="text/css">
+<link href="/css/style.css" rel="stylesheet" type="text/css">
+<link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-<div> 
-    <table class="table1" >
+<div class="odev"> 
+   <!--
+  <table class="table1" >
     <td><a href="https://www.kastamonu.edu.tr/index.php/tr/"><img src="src/kulogo.webp"  width="80" height="80"></a></td>
     <td><p><b>AD SOYAD<br>NO<br>SINIF</b></p></td>
     <td><p><b>Mehmet Taha Koçal<br>205511104<br>1/B</p></b></td>
     <td><p align="center"><b> BİLGİSAYAR PROGRAMCILIĞI BÖLÜMÜ <br> GRAFİK VE ANİMASYON II DERSİ ÖDEVLERİ </p></b></td>
     <td> <a href="https://www.instagram.com/tahakocal/"><img src="src/ben.webp" width="100" height="100"></a>  </td>
     </table>
+   -->
+   <iframe width="800" height="200" src="src/hafta10/hafta10odev.html"  frameborder="0" 
+   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+   </iframe>
 </div>
 <br>
 <div class="odev">
-    <h3>ÖDEV 1</h3> 
+    <h3><b>ÖDEV 1</b></h3> 
     <iframe width="600" height="600" src="src/hafta2/hafta2odev1.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 </div>
+<br>
 <div class="odev">
-    <h3>ÖDEV 2</h3> 
+    <h3><b>ÖDEV 2</b></h3> 
     <iframe width="500" height="500" src="src/hafta3/hafta3odev1.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 </div>
+<br>
 <div class="odev">
-    <h3>ÖDEV 3</h3> 
+    <h3><b>ÖDEV 3</b></h3> 
     <iframe width="555" height="130" src="src/hafta4/hafta4odev1.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 </div>
-
+<br>
 <div class="odev">
-    <h3>ÖDEV 4</h3> 
+    <h3><b>ÖDEV 4</b></h3> 
     <iframe width="600" height="600" src="src/hafta9/hafta9odev.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 </div>
-
+<br>
 <div class="social">
     <a href="https://www.instagram.com/tahakocal/">    <ion-icon name="logo-instagram">    </ion-icon>     </a>
     <a href="https://www.youtube.com/channel/UC8Gx6FH1B-kZUlOApvvt6Gw">    <ion-icon name="logo-youtube"></ion-icon>     </a>
