--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html5>
 <html lang="TR">
 <head> 
-
 <meta charset="utf-8"> 
 <meta name="author" content="Taha Kocal">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +15,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
@@ -35,7 +33,13 @@
    </iframe>
 </div>
 <br>
-
+<div class="odev">
+    <h3><b>ÖDEV 1</b></h3> 
+    <iframe width="900" height="700" src="src/hafta11/hafta11odev.html"  frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+</div>
+<br>
 <div class="social">
     <a href="https://www.instagram.com/tahakocal/">    <ion-icon name="logo-instagram">    </ion-icon>     </a>
     <a href="https://www.youtube.com/channel/UC8Gx6FH1B-kZUlOApvvt6Gw">    <ion-icon name="logo-youtube"></ion-icon>     </a>
@@ -45,7 +49,7 @@
 </div>
 
 
-<p align="center">&copy; <script>document.write(new Date().getFullYear())</script> Bütün Hakları Saklıdır</p>
+<p align="center">&copy; <script>document.write(new Date().getFullYear())</script> </p>
 
 </body>
 </html>
