--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
 </div>
 <br>
 <div class="odev">
-    <h3><b>ÖDEV 1</b></h3> 
+    <iframe width="1200" height="350" src="src/hafta12/hatfa13odev.html"  frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+</div>
+<br>
+<div class="odev">
+    <h3><b></b></h3> 
     <iframe width="900" height="700" src="src/hafta11/hafta11odev.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
@@ -49,7 +55,7 @@
 </div>
 
 
-<p align="center">&copy; <script>document.write(new Date().getFullYear())</script> </p>
+<p align="center" class="text-danger">&copy; <script>document.write(new Date().getFullYear())</script> </p>
 
 </body>
 </html>
