--- a/src/hafta11/hafta11odev.html
+++ b/src/hafta11/hafta11odev.html
@@ -11,10 +11,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>hafta11odev</title>
+<title>hafta11</title>
 <!-- write your code here -->
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-<script src="hafta11odev.js?1654720864308"></script>
+<script src="hafta11.js?1654759240668"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
@@ -42,7 +42,7 @@ function handleComplete(evt,comp) {
 	for(i=0; i<ssMetadata.length; i++) {
 		ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
 	}
-	exportRoot = new lib.hafta11odev();
+	exportRoot = new lib.hafta11();
 	stage = new lib.Stage(canvas);
 	stage.enableMouseOver();	
 	//Registers the "tick" event listener.
@@ -60,8 +60,8 @@ function handleComplete(evt,comp) {
 <!-- write your code here -->
 </head>
 <body onload="init();" style="margin:0px;">
-	<div id="animation_container" style="background-color:rgba(236, 242, 255, 1.00); width:900px; height:700px">
-		<canvas id="canvas" width="900" height="700" style="position: absolute; display: block; background-color:rgba(236, 242, 255, 1.00);"></canvas>
+	<div id="animation_container" style="background-color:rgba(49, 49, 49, 1.00); width:900px; height:700px">
+		<canvas id="canvas" width="900" height="700" style="position: absolute; display: block; background-color:rgba(49, 49, 49, 1.00);"></canvas>
 		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:900px; height:700px; position: absolute; left: 0px; top: 0px; display: block;">
 		</div>
 	</div>
