--- a/src/hafta3/hafta3.html
+++ b/src/hafta3/hafta3.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Taha`s Web Page </title>
 <link href="/css/style.css" rel="stylesheet" type="text/css">
+<link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
@@ -36,7 +37,7 @@
 </div>
 
 
-<p align="center">&copy; <script>document.write(new Date().getFullYear())</script> </p>
+<p align="center" class="text-danger">&copy; <script>document.write(new Date().getFullYear())</script> </p>
 
 </body>
 </html>
