--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
 </div>
 <br>
 <div class="odev">
-    <h3><b></b></h3> 
+    <iframe width="600" height="600" src="src/hafta9/hafta9odev1.html"  frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+</div>
+<br>
+<div class="odev">
     <iframe width="900" height="700" src="src/hafta11/hafta11odev.html"  frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
@@ -53,7 +58,6 @@
     <a href="https://www.linkedin.com/in/tahakocal/">   <ion-icon name="logo-linkedin"></ion-icon> </a>
     <a href="https://github.com/tahakocal">    <ion-icon name="logo-github">     </ion-icon>     </a>
 </div>
-
 
 <p align="center" class="text-danger">&copy; <script>document.write(new Date().getFullYear())</script> </p>
 
