--- a/index.html
+++ b/index.html
@@ -19,37 +19,12 @@
 
 <body>
 <div class="odev"> 
-   <!--
-  <table class="table1" >
-    <td><a href="https://www.kastamonu.edu.tr/index.php/tr/"><img src="src/kulogo.webp"  width="80" height="80"></a></td>
-    <td><p><b>AD SOYAD<br>NO<br>SINIF</b></p></td>
-    <td><p><b>Mehmet Taha Koçal<br>205511104<br>1/B</p></b></td>
-    <td><p align="center"><b> BİLGİSAYAR PROGRAMCILIĞI BÖLÜMÜ <br> GRAFİK VE ANİMASYON II DERSİ ÖDEVLERİ </p></b></td>
-    <td> <a href="https://www.instagram.com/tahakocal/"><img src="src/ben.webp" width="100" height="100"></a>  </td>
-    </table>
-   -->
-   <iframe width="800" height="200" src="src/hafta10/hafta10odev.html"  frameborder="0" 
+
+   <iframe width="1200" height="1000" src="src/index/index.html"  frameborder="0" 
    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
    </iframe>
 </div>
-<br>
-<div class="odev">
-    <iframe width="1200" height="350" src="src/hafta12/hatfa13odev.html"  frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
-</div>
-<br>
-<div class="odev">
-    <iframe width="600" height="600" src="src/hafta9/hafta9odev1.html"  frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
-</div>
-<br>
-<div class="odev">
-    <iframe width="900" height="700" src="src/hafta11/hafta11odev.html"  frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
-</div>
+
 <br>
 <div class="social">
     <a href="https://www.instagram.com/tahakocal/">    <ion-icon name="logo-instagram">    </ion-icon>     </a>
