--- a/src/redbull/hafta11redbull.html
+++ b/src/redbull/hafta11redbull.html
@@ -28,11 +28,11 @@
 </div>
 <br>
 <div class="social">
-    <a href="https://www.instagram.com/tahakocal/">    <ion-icon name="logo-instagram">    </ion-icon>     </a>
-    <a href="https://www.youtube.com/channel/UC8Gx6FH1B-kZUlOApvvt6Gw">    <ion-icon name="logo-youtube"></ion-icon>     </a>
-    <a href="https://twitter.com/tahakocal">    <ion-icon name="logo-twitter">      </ion-icon>     </a>
-    <a href="https://www.linkedin.com/in/tahakocal/">   <ion-icon name="logo-linkedin"></ion-icon> </a>
-    <a href="https://github.com/tahakocal">    <ion-icon name="logo-github">     </ion-icon>     </a>
+    <a href="https://www.instagram.com/tahakocal/" target="_blank">    <ion-icon name="logo-instagram">    </ion-icon>     </a>
+    <a href="https://www.youtube.com/channel/UC8Gx6FH1B-kZUlOApvvt6Gw" target="_blank">    <ion-icon name="logo-youtube"></ion-icon>     </a>
+    <a href="https://twitter.com/tahakocal" target="_blank">    <ion-icon name="logo-twitter">      </ion-icon>     </a>
+    <a href="https://www.linkedin.com/in/tahakocal/" target="_blank">   <ion-icon name="logo-linkedin"></ion-icon> </a>
+    <a href="https://github.com/tahakocal" target="_blank">    <ion-icon name="logo-github">     </ion-icon>     </a>
 </div>
 
 
